--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
         <activity android:name=".BacklogActivity" />
         <activity android:name=".GauntletActivity" />
-        <activity android:name=".Profile"></activity>
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
