--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,11 @@ android {
 }
 
 dependencies {
-    compile 'com.jakewharton:butterknife:7.0.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
-    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
 }
