add Giant Bomb API Key to gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+GiantBombAPIKey = "2f967f280a5b9a101f906dc5a852a0b7bb943a21"
