--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildTypes.each {
+                it.buildConfigField 'String', 'GIANTBOMB_API_KEY', GiantBombAPIKey
+            }
         }
     }
 }
