--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.firebase:firebase-database:9.2.1'
     compile 'com.google.firebase:firebase-auth:9.2.0'
+    compile 'com.firebaseui:firebase-ui-database:0.4.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
