--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:name="com.example.backloginsurmountable.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label= "Backlog Insurmountable"
         android:supportsRtl="true"
         android:theme="@style/NoActionBarTheme">
         <activity
