add ViewPager into scraper, successfully implement XML to JSON conversion.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
             android:noHistory="true" />
         <activity android:name=".ui.InfoActivity" />
         <activity android:name=".ui.BaseActivity" />
-        <activity android:name=".ui.ScraperActivity"></activity>
+        <activity android:name=".ui.ScraperActivity" />
+        <activity android:name=".ui.ScraperDetailActivity"></activity>
     </application>
 
 </manifest>
