--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,20 +25,23 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    apt 'org.parceler:parceler:1.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services-appindexing:9.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'org.parceler:parceler-api:1.1.1'
-    apt 'org.parceler:parceler:1.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.firebase:firebase-database:9.2.1'
     compile 'com.google.firebase:firebase-auth:9.2.0'
     compile 'com.firebaseui:firebase-ui-database:0.4.1'
+    //    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //    compile project(":JavaJSON")
+    compile files('/Users/Guest/Desktop/android-BacklogInsurmountable/libs/java-json/java-json.jar')
 }
 
 apply plugin: 'com.google.gms.google-services'
