--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,11 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.2.1'
     compile 'com.google.firebase:firebase-auth:9.2.0'
     compile 'com.firebaseui:firebase-ui-database:0.4.1'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     //    compile project(":JavaJSON")
-    compile files(':libs/java-json/java-json.jar')
+    //    compile files(':libs/java-json/java-json.jar')
+//    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/java-json.jar')
 }
 
 apply plugin: 'com.google.gms.google-services'
