finally find that one line of code that was preventing ViewPager from adapting to device rotation, and set up the landscape fragment for same.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".ui.SignUpActivity" />
         <activity
             android:name=".ui.GameDetailActivity"
+            android:configChanges="orientation"
             android:noHistory="true" />
         <activity android:name=".ui.InfoActivity" />
         <activity android:name=".ui.BaseActivity" />
